--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8081
-EUREKASERVER=''
+EUREKA_SERVER=http://localhost:8070/eureka/
 DB_URL=jdbc:postgresql://localhost:5432/postgres
 DB_USER=postgres
 DB_PASSWORD=root
